Fix makefile using outdated library file name

--- a/task_four/test/makefile
+++ b/task_four/test/makefile
@@ -1,7 +1,7 @@
 all: main.exe run
 
-main.exe: main.c ../int_array.c
-	@clang -Wall -o main.exe main.c ../int_array.c
+main.exe: main.c ../int_set.c
+	@clang -Wall -o main.exe main.c ../int_set.c
 
 run: main.exe
 	@./main.exe
