Separate maybeint from task_three and task_four

--- a/task_four/test/makefile
+++ b/task_four/test/makefile
@@ -1,7 +1,7 @@
 all: main.exe run
 
-main.exe: main.c ../int_set.c
-	@clang -Wall -o main.exe main.c ../int_set.c
+main.exe: main.c ../int_set.c ../../libs/maybe_int.c
+	@clang -Wall -o main.exe main.c ../int_set.c ../../libs/maybe_int.c
 
 run: main.exe
 	@./main.exe
