--- a/task_three/test/makefile
+++ b/task_three/test/makefile
@@ -1,7 +1,7 @@
 all: main.exe run
 
-main.exe: main.c ../booking.c
-	@clang -Wall -o main.exe main.c ../booking.c
+main.exe: main.c ../booking.c ../../libs/maybe_int.c
+	@clang -Wall -o main.exe main.c ../booking.c ../../libs/maybe_int.c
 
 run: main.exe
 	@./main.exe
